--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@turtle601/eslint-config",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "turtle601's custom eslint config",
   "main": "index.js",
   "repository": {
@@ -25,7 +25,8 @@
     "eslint-plugin-react": "7.34.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.6",
-    "eslint-plugin-storybook": "0.8.0"
+    "eslint-plugin-storybook": "0.8.0",
+    "eslint-plugin-import": "^2.31.0"
   },
   "peerDependencies": {
     "eslint": ">= 8",
